Fix browser example

--- a/example/browser.html
+++ b/example/browser.html
@@ -5,9 +5,8 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOML Example</title>
   </head>
-  <body>   
+  <body>
     <p id="text"></p>
-    <script type="application/dart" src="browser.dart"></script>
-    <script src="packages/browser/dart.js"></script>
+    <script defer src="browser.dart.js"></script>
   </body>
 </html>
