Move examples to subdirectories

--- a/example/http_config_loader/web/index.html
+++ b/example/http_config_loader/web/index.html
@@ -6,7 +6,7 @@
     <title>TOML Example</title>
   </head>
   <body>
-    <p id="text"></p>
-    <script defer src="browser.dart.js"></script>
+    <p id="text">Loading...</p>
+    <script defer src="example.dart.js"></script>
   </body>
 </html>
